[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Datapacks/UI/InGameMenu/DatapackInGameEntry.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Datapacks/UI/InGameMenu/DatapackIngameMenu.gd" type="Script" id=2]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=3]

[node name="DatapackIngameMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = -1.0
margin_right = 1280.0
margin_bottom = 24.4
text = "You can load or unload datapacks here. Loading a datapack will add its characters and scenes into your save. Unloading a datapack will remove them and erase any progress!"
autowrap = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1280.0
margin_bottom = 32.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 1280.0
margin_bottom = 617.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntryList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1280.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="DatapackInGameEntry" parent="VBoxContainer/ScrollContainer/EntryList" instance=ExtResource( 1 )]
margin_bottom = 25.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 620.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 100 )
columns = 5

[node name="CloseButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_right = 256.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Close"

[connection signal="visibility_changed" from="." to="." method="_on_DatapackIngameMenu_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
